--- a/src/styles/components/tabs.css
+++ b/src/styles/components/tabs.css
@@ -48,6 +48,30 @@
   margin-right: 2px !important;
 }
 
+/* Eliminar margin-right de la primera pestaña (Home) */
+.p-tabview .p-tabview-nav li:first-child {
+  margin-right: 0px !important;
+  padding-right: 0px !important;
+  padding-left: 0px !important;
+  margin-left: 0px !important;
+  width: 50px !important;
+  min-width: 50px !important;
+  max-width: 50px !important;
+  flex: 0 0 50px !important;
+}
+
+/* Eliminar padding del nav-link en la primera pestaña */
+.p-tabview .p-tabview-nav li:first-child .p-tabview-nav-link {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+  width: 100% !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
 .p-tabview .p-tabview-nav li .p-tabview-nav-link {
   padding: 0 0.7rem !important;
   font-size: 0.78rem !important;
@@ -224,8 +248,8 @@
 
 /* Enfoque diferente: usar JavaScript para controlar la ink bar específicamente cuando Home está activo */
 .tabview-groups-bar[data-home-active="true"] .p-tabview-nav .p-tabview-ink-bar {
-  width: 45px !important;
-  max-width: 45px !important;
+  width: 50px !important;
+  max-width: 50px !important;
   left: 0 !important;
   right: auto !important;
   transform: translateX(0) !important;
@@ -243,8 +267,9 @@
 
 /* Estilo específico para el botón Home (primera pestaña) */
 .tabview-groups-bar .p-tabview-nav li:first-child {
-  min-width: 45px !important;
-  max-width: 45px !important;
+  min-width: 50px !important;
+  max-width: 50px !important;
+  margin-right: 0px !important;
 }
 
 /* Centrar el contenido del botón Home */
@@ -263,7 +288,7 @@
 
 /* Ajustar la línea inferior (ink bar) del botón Home para que no sobresalga */
 .tabview-groups-bar .p-tabview-nav li:first-child .p-tabview-ink-bar {
-  max-width: 45px !important;
+  max-width: 50px !important;
   left: 0 !important;
   right: auto !important;
 }
@@ -271,7 +296,7 @@
 /* Alternativa: ocultar completamente la línea inferior en el botón Home */
 .tabview-groups-bar .p-tabview-nav li:first-child.p-highlight .p-tabview-ink-bar {
   width: 100% !important;
-  max-width: 45px !important;
+  max-width: 50px !important;
 }
 
 .tabview-groups-bar .p-tabview-nav .p-tabview-nav-link {
